[tool.poetry]
name = "soas"
version = "0.1.0"
description = ""
authors = ["ingval <ingvild.almasbakk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
mesa = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
